# LTX-2

./: .gitignore  README.md  environment.yaml  pyproject.toml  tasks.md
DreamID-V/: README.md  generate.py  generate_dreamidv.py  generate_dreamidv_dwpose.py  generate_dreamidv_faster.py  pyproject.toml  requirements.txt
DreamID-V/dreamidv_wan/: wan_swapface.py
DreamID-V/dreamidv_wan/configs/: __init__.py  wan_swapface.py
DreamID-V/dreamidv_wan/distributed/: xdit_context_parallel.py
DreamID-V/dreamidv_wan/modules/: __init__.py  model.py  projector.py  vae.py
DreamID-V/dreamidv_wan/utils/: fm_solvers.py  fm_solvers_unipc.py  na_resize.py  qwen_vl_utils.py
DreamID-V/dreamidv_wan_faster/: wan_swapface.py
DreamID-V/dreamidv_wan_faster/configs/: shared_config.py
DreamID-V/dreamidv_wan_faster/distributed/: fsdp.py  xdit_context_parallel.py
DreamID-V/dreamidv_wan_faster/modules/: clip.py  model.py  projector.py  t5.py  xlm_roberta.py
DreamID-V/dreamidv_wan_faster/utils/: __init__.py  na_resize.py  prompt_extend.py  utils.py
DreamID-V/express_adaption/: align_refvideo.py  get_video_npy.py  poseguider.py  utils.py
DreamID-V/express_adaption/media_pipe/: __init__.py  draw_util.py  face_landmark.py  mp_utils.py  pose_util.py
DreamID-V/pose/: extract.py
DreamID-V/pose/dwpose/: onnxdet.py  onnxpose.py  util.py  wholebody.py
app/: .coverage  Makefile  OUTLINE.md  README.md  pyproject.toml  tasks.md
app/_global/: registry.sqlite
app/_global/tags/style/: pixar.yaml
app/_global/templates/project_template/: metadata.yaml
app/config/: commands.md  global.env  models.env  models.env.example  schema-v1.yaml
app/docs/: ASPECT_RATIOS.md  LTX-2_ONLINE_RESOURCES.md  MANUAL_WORKFLOWS.md  PROMPTING_GUIDELINE.md  README.md  architecture.md  scraper.py
app/docs/prompting-hints/: Prompting Guide for LTX-2  Ltx-2.md
app/project/archived/auto_movie/: project.env.example
app/project/archived/project_slug/: metadata.yaml
app/project/archived/slug/: metadata.yaml  slug_plan.yaml
app/project/archived/test_movie/: metadata.yaml
app/project/theos-movies/theo_suburban_dragon/: metadata.yaml  theo_plan.yaml
app/projects/auto_movie/: auto_movie_plan.yaml  metadata.yaml
app/projects/auto_movie/prompts/: characters.yaml  locations.yaml
app/projects/project_slug/: project.env
app/projects/slug/prompts/: loras.yaml
app/scripts/: format.sh  lint.sh  test.sh
app/src/vtx_app/: cli.py  producer.py  style_manager.py  tags_commands.py  tags_manager.py
app/src/vtx_app/config/: env_layers.py  log.py  (+1 more)
app/tests/vtx_app/: test_automation.py  test_clean.py  test_cli.py  test_produce.py  test_producer_logic.py  test_style_manager.py  test_tags.py  test_wizard.py
(+90 files in other folders)
