[project]
name = "vtx-app"
version = "0.1.0"
description = "Longform orchestration app for LTX-2/VTX-2 pipelines"
readme = "README.md"
authors = [
    { name = "Gary Gerber", email = "contact@garygerber.com" }
]
requires-python = ">=3.12"

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "openai>=1.0.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vtx = "vtx_app.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "PLC0415", # import-outside-top-level
    "A004",    # builtin-variable-shadowing
    "PT011",   # pytest-raises-too-broad
    "ANN401",  # any-type
    "T201",    # print
    "B904",    # raise-without-from-inside-except
]

